--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   #gameOver, #pauseMenu, #customPopup {
     position: absolute; top: 50%; left: 50%;
-    transform: translate(-50%, -50%); /* Centers element perfectly in viewport */
+    transform: translate(-50%, -50%);
     background-color: rgba(0,0,0,0.9);
     padding: 25px; border-radius: 15px;
     display: none; z-index: 100; text-align: center;
@@ -82,7 +82,7 @@
   .menuButtons button:hover, #mapSelectScreen button:hover, #leaderboardScreen button:hover { background: rgba(0,255,255,0.1); box-shadow: 0 0 15px #00ffff; transform: scale(1.05); }
 
   .theme-option { display: flex; justify-content: space-between; align-items: center; margin: 15px 0; }
-  #alienText { position: absolute; top: 10px; left: 50%; transform: translateX(-50%); background: #00ff00; color: black; padding: 8px 16px; border-radius: 6px; display: none; font-weight: bold; z-index: 15; }
+  #alienText { position: absolute; top: 10px; left: 50%; transform: translateX(-50%); background: #00ff00; color: black; padding: 8px 16px; border-radius: 6px; display: none; font-weight: bold; z-index: 15; text-align: center; width: 80%; }
 </style>
 </head>
 <body onload="loadTheme()">
@@ -171,6 +171,8 @@ let timeElapsed = 0;
 let currentMap = "classic";
 let paused = false;
 let aliens = [];
+let gameSpeed = 500;
+let isHiveMind = false;
 
 function updatePosition(){
   pacman.style.transform = `translate(${pacmanPos.x}px,${pacmanPos.y}px)`;
@@ -187,15 +189,33 @@ function movePacman(dir){
   updatePosition(); checkCollision(); checkPelletPickup();
 }
 
-function moveGhostSmart(g){
+function moveGhostSmart(g, index){
   if(ghostFrozen || paused) return;
-  if(Math.random()<0.5){
-    if(g.pos.x<pacmanPos.x && g.pos.x<360) g.pos.x+=40;
-    else if(g.pos.x>pacmanPos.x && g.pos.x>0) g.pos.x-=40;
-  }else{
-    if(g.pos.y<pacmanPos.y && g.pos.y<360) g.pos.y+=40;
-    else if(g.pos.y>pacmanPos.y && g.pos.y>0) g.pos.y-=40;
+  
+  let moveX = g.pos.x < pacmanPos.x ? 40 : -40;
+  let moveY = g.pos.y < pacmanPos.y ? 40 : -40;
+
+  // 600 Score (Hard Mode Only): Hive Mind Logic
+  if(currentMap === "hard" && isHiveMind){
+    if(index % 2 === 0){
+      if(g.pos.x !== pacmanPos.x) g.pos.x += moveX;
+      else g.pos.y += moveY;
+    } else {
+      if(g.pos.y !== pacmanPos.y) g.pos.y += moveY;
+      else g.pos.x += moveX;
+    }
+  } else {
+    // Normal / Classic logic
+    if(Math.random()<0.5){
+      if(g.pos.x !== pacmanPos.x) g.pos.x += moveX;
+    } else {
+      if(g.pos.y !== pacmanPos.y) g.pos.y += moveY;
+    }
   }
+
+  g.pos.x = Math.max(0, Math.min(360, g.pos.x));
+  g.pos.y = Math.max(0, Math.min(360, g.pos.y));
+  
   updatePosition(); checkCollision();
 }
 
@@ -231,16 +251,22 @@ function updateHighScores(){
 function restartGame(){
   paused=false; aliens.forEach(a=>a.el.remove()); aliens=[];
   pacmanPos={x:0,y:0}; ghostPos={x:360,y:360};
-  score=0; timeElapsed=0; updateHUD(); updatePosition();
+  score=0; timeElapsed=0; gameSpeed = 500; isHiveMind = false;
+  updateHUD(); updatePosition();
   gameOverText.style.display="none"; pauseMenu.style.display="none";
   spawnPellet(); 
-  clearInterval(ghostInterval); clearInterval(timerInterval);
-  ghostInterval=setInterval(()=>{
-    moveGhostSmart({pos:ghostPos});
-    aliens.forEach(a=>moveGhostSmart(a));
-    checkAlienSpawn();
-  },500);
+  startGhostLoop();
+  clearInterval(timerInterval);
   timerInterval=setInterval(()=>{ if(!paused){timeElapsed++;updateHUD();} },1000);
+}
+
+function startGhostLoop(){
+  clearInterval(ghostInterval);
+  ghostInterval=setInterval(()=>{
+    moveGhostSmart({pos:ghostPos}, 0);
+    aliens.forEach((a, i)=>moveGhostSmart(a, i+1));
+    checkMilestones();
+  }, gameSpeed);
 }
 
 function spawnPellet(){
@@ -265,6 +291,53 @@ function freezeGhost(){ ghostFrozen=true; setTimeout(()=>{ghostFrozen=false;},50
 
 function updateHUD(){ scoreDisplay.textContent=score; timerDisplay.textContent=timeElapsed; }
 
+/* Evolution System - HARD MODE ONLY */
+function checkMilestones(){
+  if(currentMap!=="hard") return;
+
+  if(score === 200 && aliens.length === 0) {
+    notify("NEW ALIEN APPEARED!");
+    spawnAlien();
+  }
+  if(score === 400 && gameSpeed === 500) {
+    notify("SPEED BOOST: EVERYONE FASTER!");
+    gameSpeed = 300;
+    startGhostLoop();
+  }
+  if(score === 600 && !isHiveMind) {
+    notify("HIVE MIND: THEY ARE WORKING TOGETHER!");
+    isHiveMind = true;
+  }
+  if(score === 800 && gameSpeed === 300) {
+    notify("THE SLOW-MO PAIN BEGINS...");
+    gameSpeed = 700;
+    startGhostLoop();
+  }
+  if(score === 1000 && aliens.length === 1) {
+    notify("THIRD ALIEN ARRIVES!");
+    spawnAlien();
+  }
+}
+
+function notify(txt){
+  alienText.innerText = txt;
+  alienText.style.display = "block";
+  setTimeout(()=> { alienText.style.display = "none"; }, 3000);
+}
+
+function spawnAlien(){
+  let safeX, safeY, attempts = 0;
+  do {
+    safeX = Math.floor(Math.random()*10)*40;
+    safeY = Math.floor(Math.random()*10)*40;
+    attempts++;
+  } while (Math.abs(safeX - pacmanPos.x) < 80 && Math.abs(safeY - pacmanPos.y) < 80 && attempts < 50);
+
+  const aEl=document.createElement("div"); aEl.className="alien"; gameArea.appendChild(aEl);
+  aliens.push({el:aEl, pos:{x:safeX, y:safeY}});
+}
+
+/* UI Logic */
 function showMapSelect(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("mapSelectScreen").style.display="block"; updateHighScores(); }
 function showLeaderboard(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="block"; updateHighScores(); }
 function goHome(){ paused=false; clearInterval(ghostInterval); clearInterval(timerInterval); document.getElementById("mapSelectScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="none"; document.getElementById("gameArea").style.display="none"; document.getElementById("hud").style.display="none"; controls.style.display="none"; document.getElementById("homeScreen").style.display="block"; }
@@ -311,25 +384,6 @@ function loadTheme(){
     document.getElementById("borderColor").value = localStorage.getItem("borderTheme");
     applyColors();
   }
-}
-
-function checkAlienSpawn(){
-  if(currentMap!=="hard") return;
-  if(score>=200 && aliens.length===0) spawnAlien();
-  if(score>=1000 && aliens.length===1) spawnAlien();
-}
-function spawnAlien(){
-  let safeX, safeY, attempts = 0;
-  do {
-    safeX = Math.floor(Math.random()*10)*40;
-    safeY = Math.floor(Math.random()*10)*40;
-    attempts++;
-  } while (Math.abs(safeX - pacmanPos.x) < 80 && Math.abs(safeY - pacmanPos.y) < 80 && attempts < 50);
-
-  const aEl=document.createElement("div"); aEl.className="alien"; gameArea.appendChild(aEl);
-  aliens.push({el:aEl, pos:{x:safeX, y:safeY}});
-  alienText.style.display="block";
-  setTimeout(()=>{alienText.style.display="none";},2000);
 }
 
 document.getElementById("up").addEventListener("click",()=>movePacman("up"));
